# privateGPT

./: Makefile  constants.py  ingest.py  privateGPT.py  pyproject.toml
